# pycrud

./: .coveragerc  .gitignore  LICENSE  README.md  changelog.md  dev_main.py  dev_main2.py  pyproject.toml  roadmap.md
.github/workflows/: test.yml
aorm/: const.py  crud.py  main.py  query.py  types.py  utils.py
datalayer/: crud.py  error.py  main.py  query.py  types.py
examples/: fastapi_peewee_crud.py  fastapi_peewee_crud_with_permission.py  fastapi_sqlalchemy_crud.py  fastapi_sqlalchemy_crud_with_permission.py  model_peewee.py  model_sqlalchemy.py
exmaples/: fastapi_crud.py  fastapi_crud_with_permission.py  fastapi_peewee_crud.py  fastapi_sqlalchemy_crud.py
pycrud/: __init__.py  const.py  dto_generator.py  error.py  permission.py  query.py  types.py  values.py
pycrud/crud/: __init__.py  _core_crud.py  base_crud.py  query_result_row.py  sql_crud.py
pycrud/crud/ext/: peewee_crud.py  sqlalchemy_crud.py  tortoise_crud.py
pycrud/helpers/fastapi_ext/: __init__.py
pycrud/helpers/pydantic_ext/: __init__.py  dict_witk_kv_pair.py
pycrud/utils/: __init__.py  json_ex.py
pycurd/: const.py  error.py  permission.py  query.py  types.py  values.py
pycurd/crud/: _core_crud.py  base_crud.py  query_result_row.py  sql_crud.py
pycurd/pydantic_ext/: hex_string.py
pycurd/utils/: json_ex.py
querylayer/: const.py  crud.py  main.py  permission.py  query.py  types.py  values.py
querylayer/crud/: _core_crud.py  base_crud.py  query_result_row.py  sql_crud.py
querylayer/utils/: name_helper.py
tests/: test_crud.py  test_crud_array.py  test_crud_bytes.py  test_crud_sqlalchemy.py  test_crud_with_perm.py  test_hexstr_type.py  test_perm.py  test_pycrud.py  test_query.py  test_query_dsl.py  test_query_parse.py  test_querylayer.py  test_record_mapping.py  test_role.py  test_utils_name_helper.py  test_values.py  test_version.py
(+3 files in other folders)
