[tool.poetry]
name = "querylayer"
version = "0.1.0"
description = ""
authors = ["fy <fy0748@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.9"
PyPika = "^0.42.1"
typing-extensions = ">=3.7.4"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
peewee = ">=3.13.3"
SQLAlchemy = ">=1.3.19"
tortoise-orm = ">=0.16.16"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
